Added more space for layers

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <button id="clearPatient" class="btn-danger">Nuevo Paciente</button>
             </div>
 
-            <div class="control-section">
+            <div class="control-section layers-section">
                 <h3>Capas Activas (<span id="imageCount">0</span>)</h3>
                 <div id="layersList" class="layers-list"></div>
             </div>
