--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
                     <input type="range" id="zoomControl" min="50" max="900" value="100" step="1">
                     <span id="zoomValue">100%</span>
                 </div>
+
+                <button id="autoAdjustBrightness" class="btn-secondary">Igualar Iluminación</button>
             </div>
 
             <div class="control-section">
