Add layer scale control

--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
                 <div class="alignment-instructions">
                     Selecciona una capa y usa las teclas de dirección o haz clic y arrastra para alinear
                 </div>
+                
+                <div class="control-group">
+                    <label for="scaleControl">Escala</label>
+                    <input type="range" id="scaleControl" min="50" max="200" value="100" step="1">
+                    <span id="scaleValue">100%</span>
+                </div>
+                
                 <div class="alignment-controls">
                     <button class="btn-arrow" data-direction="up">▲</button>
                     <div class="arrow-row">
