Moved brightness control

--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
                 </div>
                 
                 <div class="control-group">
+                    <label for="brightnessControl">Brillo</label>
+                    <input type="range" id="brightnessControl" min="50" max="200" value="100" step="1">
+                    <span id="brightnessValue">100%</span>
+                </div>
+                
+                <div class="control-group">
                     <label for="scaleControl">Escala</label>
                     <input type="range" id="scaleControl" min="50" max="200" value="100" step="1">
                     <span id="scaleValue">100%</span>
