Reset zoom on clear

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="control-section">
                 <h3>Cargar Fotos</h3>
                 <input type="file" id="imageInput" accept="image/*" multiple>
-                <button id="clearPatient" class="btn-danger">Limpiar Todo</button>
+                <button id="clearPatient" class="btn-danger">Nuevo Paciente</button>
             </div>
 
             <div class="control-section layers-section">
