--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <span id="zoomValue">100%</span>
                 </div>
 
-                <button id="autoAdjustBrightness" class="btn-secondary">Igualar Iluminación</button>
+                <button id="autoAdjustBrightness" class="btn-secondary">Igualar Tonos</button>
             </div>
 
             <div class="control-section">
