--- a/index.html
+++ b/index.html
@@ -73,6 +73,12 @@
                     <span id="scaleValue">100%</span>
                 </div>
                 
+                <div class="control-group">
+                    <label for="rotationControl">Rotación</label>
+                    <input type="range" id="rotationControl" min="-180" max="180" value="0" step="1">
+                    <span id="rotationValue">0°</span>
+                </div>
+                
                 <div class="alignment-controls">
                     <button class="btn-arrow" data-direction="up">▲</button>
                     <div class="arrow-row">
