Added toggle key for reference points

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
                         <strong>Atajos de teclado:</strong><br>
                         <kbd>Shift</kbd> + arrastrar = Pan<br>
                         <kbd>Rueda</kbd> = Zoom<br>
-                        <kbd>↑↓←→</kbd> = Mover capa
+                        <kbd>↑↓←→</kbd> = Mover capa<br>
+                        <kbd>R</kbd> = Mostrar/ocultar puntos
                     </div>
                 </div>
             </div>
