--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
                 <div class="help-icon">
                     <span class="help-button">?</span>
                     <div class="help-tooltip">
-                        <strong>Atajos de teclado:</strong><br>
-                        <kbd>Shift</kbd> + arrastrar = Pan<br>
+                        <strong>Atajos de visualización:</strong>
+                        <kbd>Arrastrar</kbd> = Pan<br>
                         <kbd>Rueda</kbd> = Zoom<br>
-                        <kbd>↑↓←→</kbd> = Mover capa<br>
-                        <kbd>R</kbd> = Mostrar/ocultar puntos
+                        <kbd>R</kbd> = Mostrar/ocultar referencias<br><br>
+                        <strong>Atajos de capa:</strong>
+                        <kbd>Shift</kbd> + <kbd>Arrastrar</kbd> = Mover capa<br>
                     </div>
                 </div>
             </div>
