--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
                         <kbd>R</kbd> = Mostrar/ocultar referencias<br><br>
                         <strong>Atajos de capa:</strong>
                         <kbd>Shift</kbd> + <kbd>Arrastrar</kbd> = Mover capa<br>
+                        <kbd>↑↓←→</kbd> = Mover capa<br>
+                        <kbd>+</kbd> / <kbd>-</kbd> = Escalar capa<br>
+                        <kbd>,</kbd> / <kbd>.</kbd> = Rotar capa
                     </div>
                 </div>
             </div>
