--- a/index.html
+++ b/index.html
@@ -20,12 +20,17 @@
                         <strong>Atajos de visualización:</strong>
                         <kbd>Arrastrar</kbd> = Pan<br>
                         <kbd>Rueda</kbd> = Zoom<br>
-                        <kbd>R</kbd> = Mostrar/ocultar referencias<br><br>
+                        <kbd>R</kbd> = Mostrar/ocultar referencias<br>
                         <strong>Atajos de capa:</strong>
-                        <kbd>Shift</kbd> + <kbd>Arrastrar</kbd> = Mover capa<br>
-                        <kbd>↑↓←→</kbd> = Mover capa<br>
+                        <kbd>V</kbd> = Mostrar/Ocultar capa<br>
+                        <kbd>B</kbd> = Bloquear/Desbloquear capa<br>
+                        <kbd>T</kbd> = Igualar tonos<br><br>
+                        <kbd>M</kbd> = Marcar puntos de referencia<br>
+                        <kbd>A</kbd> = Alinear por referencias<br>
                         <kbd>+</kbd> / <kbd>-</kbd> = Escalar capa<br>
-                        <kbd>,</kbd> / <kbd>.</kbd> = Rotar capa
+                        <kbd>,</kbd> / <kbd>.</kbd> = Rotar capa<br>
+                        <kbd>Shift</kbd> + <kbd>Arrastrar</kbd> = Mover capa<br>
+                        <kbd>↑↓←→</kbd> = Mover capa
                     </div>
                 </div>
             </div>
