--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
                         <kbd>Rueda</kbd> = Zoom<br>
                         <kbd>R</kbd> = Mostrar/ocultar referencias<br>
                         <strong>Atajos de capa:</strong>
+                        <kbd>Tab</kbd> = Activa la siguiente capa<br>
+                        <kbd>Shift</kbd> + <kbd>Tab</kbd> = Activa la capa anterior<br>
+                        <kbd>Z</kbd> / <kbd>X</kbd> = Opacidad capa<br>
                         <kbd>V</kbd> = Mostrar/Ocultar capa<br>
                         <kbd>B</kbd> = Bloquear/Desbloquear capa<br>
-                        <kbd>T</kbd> = Igualar tonos<br><br>
+                        <kbd>T</kbd> = Igualar tonos<br>
                         <kbd>M</kbd> = Marcar puntos de referencia<br>
                         <kbd>A</kbd> = Alinear por referencias<br>
                         <kbd>+</kbd> / <kbd>-</kbd> = Escalar capa<br>
