--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
                 <div class="help-icon">
                     <span class="help-button">?</span>
                     <div class="help-tooltip">
+                        <strong>Atajos de imagenes:</strong>
+                        <kbd>O</kbd> = Cargar fotos<br>
+                        <kbd>N</kbd> = Nuevo paciente<br>
                         <strong>Atajos de visualización:</strong>
                         <kbd>Arrastrar</kbd> = Pan<br>
                         <kbd>Rueda</kbd> = Zoom<br>
@@ -24,6 +27,7 @@
                         <strong>Atajos de capa:</strong>
                         <kbd>Tab</kbd> = Activa la siguiente capa<br>
                         <kbd>Shift</kbd> + <kbd>Tab</kbd> = Activa la capa anterior<br>
+                        <kbd>Supr</kbd> = Eliminar capa<br>
                         <kbd>Z</kbd> / <kbd>X</kbd> = Opacidad capa<br>
                         <kbd>V</kbd> = Mostrar/Ocultar capa<br>
                         <kbd>B</kbd> = Bloquear/Desbloquear capa<br>
